--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "nprogress": "^0.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-lazyload": "^3.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4"
   },
